fixed headers not showing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,13 +81,12 @@ a {
 }
 
 .rightnavhome li{
+  display: flex;
+  overflow: hidden;
   border: 4px solid black;
   margin-bottom: 4px;
   margin-right: 10px;
   margin-left: 8px;
-  padding: 20px;
-  padding-left: 40px;
-  padding-right: 40px;
   text-decoration: none;
   letter-spacing: .15em;
   font-weight:bold;
@@ -98,6 +97,12 @@ a {
 
 .rightnavhome li a{
   color: black;
+  display: inline-block;
+  width:100%;
+  padding: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+  height:100%;
 }
 
 /* Animation */
@@ -185,17 +190,8 @@ nav li a {
 
 /*########### Resume #########*/
 .resumeImg img{
-  -webkit-transition: all 0.4s ease-out;
-  -moz-transition: all 0.4s ease-out;
-  transition: all 0.4s ease-out;
   width: 100%;
   height: 100%;
   /*max-height: 680px;*/
   max-width: 510px;
-}
-.resumeImg img:hover {
-  -webkit-transition: all 0.8s ease-out;
-  -moz-transition: all 0.8s ease-out;
-  transition: all 0.8s ease-out;
-  transform: translateY(-5%) scale(1.3);
 }
